# qkit

./: .gitattributes  .gitignore  .travis.yml  AUTHORS  CITATION.cff  Progress_Bar.py  README.md  README_SEMISPIN.md  README_SEMISPIN.txt  Readme.txt  ToDo.txt  associate_h5_windows.bat  devices.toml.example  install.bat  jupyter_lab_config.py  launch.bat  launch.ps1  launch.sh  launch_qviewkit.bat  pyproject.toml  qkit_local_config.py  requirements.txt
.github/workflows/: release.yml  test.yml
analysis/: 20150428_eval.ipynb  dat_reader.py  power_spectrum.ipynb  spectrum.ipynb
data/: README.md
doc/: make.bat
doc/notebooks/: Basic_QKIT_start.ipynb  Quickplot_demonstration.ipynb  Radiall_switch_basics.ipynb  Sample_Class.ipynb  TIP2_client_basics.ipynb  VirtualAWG_basics.ipynb  pointtracker_and_anticrossing_fit_basics.ipynb  qData.ipynb  qviewkit_basics.ipynb  spectroscopy_measurement_basics.ipynb  store_data_basics.ipynb  time_domain.ipynb
doc/sample_data/: QZQ3H8.sample
doc/source/: conf.py  index.rst  modules.rst  qkit.analysis.circle_fit.rst  qkit.core.lib.devices.rst  qkit.core.lib.file_service.rst  qkit.gui.rst  qkit.measure.timedomain.awg.rst  qkit.measure.transport.rst  qkit.rst  qkit.services.qplexkit.rst  qkit.services.rst  qkit.storage.rst
generate/: generate_waveform.py  load_awg.py  set_awg.py  tomography.py
gui/notebook/: Progress_Bar.py
install/: Windows_UID_sorting.reg  associate_h5_windows.bat  install.bat  qviewkit.desktop
instruments/: Anritsu_VNA.py  EthernetServerWin.py  IQ_Mixer.py  MicroMag3.py  OxfordInstruments_Kelvinox_IGH.py  RS_FSUP.py  Spectrum_M2i2030.py  Spectrum_M3i2132.py  Tektronix_AWG7062.py  Virtual_Coil.py  te_opto_dac.py  tip_client.py  virtual_temperature_UFO.py
logs/: .gitignore  README.md
measure/: samples_class.py
monitor/: edw_client.py  edw_server.py  switchbox_server.py  two_port_switch_manual_client.py
notebooks/: README.md
qkit/: __init__.py  requirements.txt
tests/: DTG_test.py  test_qkit_basics.py
(+1275 files in other folders)
